--- a/build.gradle
+++ b/build.gradle
@@ -100,7 +100,7 @@ artifacts {
 }*/
 
 task outputNoTestJar(type: Jar) {
-    destinationDir = new File("build/libs/fixed/")
+    destinationDir = new File("D:/Modding/ACsGuis/build/libs/fixed/")
     archiveName = builtFile
     project.logger.lifecycle("Copy from ${builtFile}")
     from(zipTree("build/libs/${builtFile}")) {
@@ -108,15 +108,17 @@ task outputNoTestJar(type: Jar) {
         exclude '/assets/acsguis/css/dnx_debug.css'
         exclude '/assets/acsguis/css/font2.ttf'
     }
+    //into(file(destinationDir))
 }
 task outputNoTestJarSources(type: Jar) {
-    destinationDir = new File("build/libs/fixed/")
+    destinationDir = new File("D:/Modding/ACsGuis/build/libs/fixed/")
     archiveName = builtFileSources
     from(zipTree("build/libs/${builtFileSources}")) {
         exclude '/fr/aym/acsguis/test/'
         exclude '/assets/acsguis/css/dnx_debug.css'
         exclude '/assets/acsguis/css/font2.ttf'
     }
+    //into(file(destinationDir))
 }
 
 tasks.reobfShadowJar.mustRunAfter shadowJar
