--- a/build.gradle
+++ b/build.gradle
@@ -29,7 +29,7 @@ apply plugin: 'com.github.johnrengelman.shadow'
 apply plugin: 'maven-publish'
 apply plugin: "com.jfrog.artifactory"
 
-version = "1.1.1-3"
+version = "1.2.0-1"
 group = "fr.aym.acsguis" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = "ACsGuis"
 
@@ -51,10 +51,10 @@ minecraft {
 }
 
 dependencies {
-    compile "fr.aym:ACsLib:1.0.0"
+    compile "fr.aym:ACsLib:1.1.0-2"
     //not anymore :) compile 'com.helger:ph-css:6.2.3'
 
-    shadow "fr.aym:ACsLib:1.0.0"
+    shadow "fr.aym:ACsLib:1.1.0-2"
     //shadow 'com.helger:ph-css:6.2.3'
     shadow files('libs/slick.jar')
 }
