Upgrade to ForgeGradle3

--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,10 @@
 buildscript {
     repositories {
-        jcenter()
-        maven { url = "http://files.minecraftforge.net/maven" }
+        maven { url = 'https://maven.minecraftforge.net/' }
+        mavenCentral()
     }
     dependencies {
-        classpath 'net.minecraftforge.gradle:ForgeGradle:2.3-SNAPSHOT'
+        classpath 'net.minecraftforge.gradle:ForgeGradle:3.+'
         classpath 'com.github.jengelman.gradle.plugins:shadow:4.0.4'
     }
 }
@@ -14,17 +14,15 @@ plugins {
 }
 
 repositories {
-    jcenter()
-    mavenCentral()
-}
-
-repositories {
     maven {
         url 'http://maven.dynamx.fr/artifactory/ACsLibRepo'
     }
+    maven {
+        url artifactory_contextUrl + '/ACsGuisRepo'
+    }
 }
 
-apply plugin: 'net.minecraftforge.gradle.forge'
+apply plugin: 'net.minecraftforge.gradle'
 apply plugin: 'com.github.johnrengelman.shadow'
 apply plugin: 'maven-publish'
 apply plugin: "com.jfrog.artifactory"
@@ -37,21 +35,46 @@ compileJava.options.encoding = 'UTF-8'
 
 sourceCompatibility = targetCompatibility = compileJava.sourceCompatibility = compileJava.targetCompatibility = '1.8'
 
-repositories {
-    maven {
-        url artifactory_contextUrl + '/ACsGuisRepo'
+minecraft {
+    // The mappings can be changed at any time, and must be in the following format.
+    // snapshot_YYYYMMDD   Snapshot are built nightly.
+    // stable_#            Stables are built at the discretion of the MCP team.
+    // Use non-default mappings at your own risk. they may not always work.
+    // Simply re-run your setup task after changing the mappings to update your workspace.
+    //mappings channel: 'snapshot', version: '20171003-1.12'
+    mappings channel: 'stable', version: '39-1.12'
+    // makeObfSourceJar = false // an Srg named sources jar is made by default. uncomment this to disable.
+
+    // accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg')
+
+    // Default run configurations.
+    // These can be tweaked, removed, or duplicated as needed.
+    runs {
+        client {
+            workingDirectory project.file('run')
+
+            // Recommended logging data for a userdev environment
+            property 'forge.logging.markers', 'SCAN,REGISTRIES,REGISTRYDUMP'
+
+            // Recommended logging level for the console
+            property 'forge.logging.console.level', 'debug'
+        }
+
+        server {
+
+            // Recommended logging data for a userdev environment
+            property 'forge.logging.markers', 'SCAN,REGISTRIES,REGISTRYDUMP'
+
+            // Recommended logging level for the console
+            property 'forge.logging.console.level', 'debug'
+        }
     }
 }
 
-minecraft {
-    version = "1.12.2-14.23.5.2847"
-    runDir = "run"
-
-    mappings = "stable_39"
-}
-
 dependencies {
+    minecraft 'net.minecraftforge:forge:1.12.2-14.23.5.2860'
     compile "fr.aym:ACsLib:1.1.0-5"
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     //not anymore :) compile 'com.helger:ph-css:6.2.3'
 
     shadow "fr.aym:ACsLib:1.1.0-5"
@@ -59,33 +82,8 @@ dependencies {
     shadow files('libs/slick.jar')
 }
 
-processResources {
-    // this will ensure that this task is redone when the versions change.
-    inputs.property "version", project.version
-    inputs.property "mcversion", project.minecraft.version
-
-    // replace stuff in mcmod.info, nothing else
-    from(sourceSets.main.resources.srcDirs) {
-        include 'mcmod.info'
-                
-        // replace version and mcversion
-        expand 'version':project.version, 'mcversion':project.minecraft.version
-    }
-        
-    // copy everything else except the mcmod.info
-    from(sourceSets.main.resources.srcDirs) {
-        exclude 'mcmod.info'
-    }
-}
-
 shadowJar {
     configurations = [project.configurations.shadow]
-}
-
-reobf {
-    shadowJar {
-        mappingType = "SEARGE"
-    }
 }
 
 ext {
@@ -131,18 +129,17 @@ task outputNoTestJarSources(type: Jar) {
     //into(file(destinationDir))
 }
 
-tasks.reobfShadowJar.mustRunAfter shadowJar
-tasks.onBuild.mustRunAfter extractAnnotationsShadowJar
 outputNoTestJar.dependsOn onBuild
 outputNoTestJarSources.dependsOn onBuild
 
 build {
-    dependsOn reobfShadowJar
+    dependsOn shadowJar
     dependsOn outputNoTestJar
     dependsOn outputNoTestJarSources
 }
 
 artifactoryPublish.dependsOn build
+jar.finalizedBy('reobfJar')
 
 publishing {
     publications {
