--- a/build.gradle
+++ b/build.gradle
@@ -18,10 +18,6 @@ repositories {
         url 'https://maven.dynamx.fr/artifactory/ACsLibRepo'
     }
 
-    maven {
-        url artifactory_contextUrl + '/ACsGuisRepo'
-    }
-
     flatDir {
         dir 'libs'
     }
@@ -32,7 +28,7 @@ apply plugin: 'com.github.johnrengelman.shadow'
 apply plugin: 'maven-publish'
 apply plugin: "com.jfrog.artifactory"
 
-version = "1.2.4-1c"
+version = "1.2.4-4"
 group = "fr.aym.acsguis" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = "ACsGuis"
 
@@ -58,11 +54,11 @@ minecraft {
 dependencies {
     minecraft 'net.minecraftforge:forge:1.12.2-14.23.5.2860'
 
-    implementation "fr.aym:ACsLib:1.2.0-1c"
+    implementation "fr.aym:ACsLib:1.2.1-3"
     implementation ":Sqript+v1.2.6.2:"
     implementation ":slick:"
 
-    shadow "fr.aym:ACsLib:1.2.0-1c"
+    shadow "fr.aym:ACsLib:1.2.1-3"
     shadow files('libs/slick.jar')
 }
 
