--- a/build.gradle
+++ b/build.gradle
@@ -28,7 +28,7 @@ apply plugin: 'com.github.johnrengelman.shadow'
 apply plugin: 'maven-publish'
 apply plugin: "com.jfrog.artifactory"
 
-version = "1.2.4-5"
+version = "1.2.5"
 group = "fr.aym.acsguis" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = "ACsGuis"
 
@@ -54,11 +54,11 @@ minecraft {
 dependencies {
     minecraft 'net.minecraftforge:forge:1.12.2-14.23.5.2860'
 
-    implementation "fr.aym:ACsLib:1.2.1-3"
+    implementation "fr.aym:ACsLib:1.2.2"
     implementation ":Sqript+v1.2.6.2:"
     implementation ":slick:"
 
-    shadow "fr.aym:ACsLib:1.2.1-3"
+    shadow "fr.aym:ACsLib:1.2.2"
     shadow files('libs/slick.jar')
 }
 
